[package]
name = "strprox"
version = "0.3.0"
edition = "2021"
description = "Top-k string autocompletion"
repository = "https://github.com/anusarati/strprox/"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["autocomplete"]
exclude = ["npm/", "src/tests"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
serde = ["dep:serde"]
wasm = ["wasm-bindgen", "js-sys"]

[profile.test]
opt-level = 3
