workspace = { members = ["src/tests/make_noise"] }
[package]
name = "strprox"
version = "0.3.3"
edition = "2021"
description = "Top-k string autocompletion"
repository = "https://github.com/anusarati/strprox/"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["autocomplete"]
exclude = ["npm/", "src/tests"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yoke = { version = "0.7.3", features = ["derive"] }
fst = "0.4"
debug_print = "1.0.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
serde = ["dep:serde"]
wasm = ["wasm-bindgen", "js-sys"]

[dev-dependencies]
rand = "0.8"
generic-tests = "0.1.2"

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3