[package]
name = "strprox-wasm"
version = "0.1.0"
authors = ["Xingzhe Li"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
strprox = { version = "0.1.8", features = ["serde", "wasm"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3"
gloo-utils = { version = "0.1", features = ["serde"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
